--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.14",
