--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,8 @@
     "crypto": "^1.0.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "jszip": "^3.10.1",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
-    "razorpay": "^2.9.5",
-    "xmldom": "^0.6.0"
+    "razorpay": "^2.9.5"
   }
 }
