--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --env-file .env src/index.js"
+    "start": "nodemon --env-file .env src/index.js",
+    "dev": "bun src/index.js"
   },
   "author": "",
   "license": "ISC",
