--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
+    "katex": "^0.16.11",
     "lenis": "^1.1.16",
     "lucide-react": "^0.344.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/katex": "^0.16.7",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
