--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -40,7 +41,7 @@
     "react-hook-form": "^7.53.2",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.0.0",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
