--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start" : "node src/index.js",
+    "start": "node src/index.js",
     "dev": "bun src/index.js",
-    "dev-kaushik": "nodemon --env-file .env src/index.js"
+    "devn": "nodemon --env-file .env src/index.js"
   },
   "author": "",
   "license": "ISC",
