--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
