--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^11.11.17",
     "katex": "^0.16.11",
     "lenis": "^1.1.16",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
