--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/katex": "^0.16.7",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
