--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL=https://writo-main-backend.onrender.com
+VITE_BACKEND_URL=http://localhost:8080/api/v1
 VITE_SERVER_URI=http://localhost:8080
 VITE_CLOUDINARY_CLOUD_NAME=dlsxjstxo
